# jarvis-assistant

./: build_android.ps1
jarvis_assistant/rust/: Cargo.toml  build.rs
jarvis_assistant/rust/src/: lib.rs
jarvis_assistant/rust/src/agents/: mod.rs
jarvis_assistant/rust/src/audio/: mod.rs
jarvis_assistant/rust/src/brain/: mod.rs
jarvis_assistant/rust/src/coordination/: mod.rs
jarvis_assistant/rust/src/digital_twin/: mod.rs
jarvis_assistant/rust/src/execution/: mod.rs
jarvis_assistant/rust/src/infra/: connectivity.rs  mod.rs  model_router.rs
jarvis_assistant/rust/src/integration_tests/: mod.rs
jarvis_assistant/rust/src/integrations/: mod.rs
jarvis_assistant/rust/src/intelligence/: mod.rs
jarvis_assistant/rust/src/knowledge/: mod.rs
jarvis_assistant/rust/src/learning/: mod.rs
jarvis_assistant/rust/src/llm/: mod.rs
jarvis_assistant/rust/src/memory/: mod.rs
jarvis_assistant/rust/src/meta_cognition/: mod.rs
jarvis_assistant/rust/src/offline_validation/: mod.rs
jarvis_assistant/rust/src/pal/: capability_detector.rs  mod.rs  types.rs
jarvis_assistant/rust/src/pal/adapters/: background_execution.rs  filesystem.rs  mod.rs  notification.rs
jarvis_assistant/rust/src/perception/: mod.rs
jarvis_assistant/rust/src/personality/: mod.rs
jarvis_assistant/rust/src/pipeline/: mod.rs
jarvis_assistant/rust/src/planner/: mod.rs
jarvis_assistant/rust/src/proactive/: mod.rs
jarvis_assistant/rust/src/safety/: mod.rs
jarvis_assistant/rust/src/simulation/: mod.rs
jarvis_assistant/rust/src/sync/: mod.rs
jarvis_assistant/rust/src/vision/: mod.rs
(+16 files in other folders)
